2015-02-27	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* boulesdb.py: Boules -> Tuvero

	* github.py: boules -> tuvero

2014-12-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* github.py: github gist/issue API added
	hasPushAccess() added for easy token validation
	url -> html_url. Users don't need the API URL

	* boulesdb.py: POST-based issue creation written
	possibility for storing and setting the github access token added
	dereferencing mistake fixed