@@ -1,4 +1,4 @@
-application: boulesdb
+application: tuvero-issue
 version: 1
 runtime: python27
 api_version: 1
@@ -10,10 +10,10 @@ libraries:
 
 handlers:
 - url: /
-  script: boulesdb.application
-  login: admin
+  script: main.application
   secure: optional
 
-- url: /.*
-  script: boulesdb.application
-  secure: optional
+- url: /settings
+  script: main.application
+  login: admin
+  secure: always
